Fix navigation alignment.

--- a/assets/sass/components/global/_googlesitekit-dashboard-navigation.scss
+++ b/assets/sass/components/global/_googlesitekit-dashboard-navigation.scss
@@ -21,6 +21,7 @@
 	.googlesitekit-navigation {
 		background-color: $c-base;
 		box-shadow: 0 3px 3px rgba($c-black, 0.1);
+		justify-content: center;
 		left: 0;
 		padding: 12px 0;
 		position: sticky;
@@ -55,10 +56,6 @@
 			@media ( min-width: $width-desktop + 1 + px ) {
 				top: 116px;
 			}
-		}
-
-		.mdc-chip-set {
-			justify-content: center;
 		}
 
 		.mdc-chip {
